--- a/post.html
+++ b/post.html
@@ -166,7 +166,7 @@
                                     <div class="dots"></div> <span>10:00 - 20:00</span>
                                 </li>
                                 <li>
-                                    <div class="tit">Samedi</div>
+                                    <div class="tit">Week-End</div>
                                     <div class="dots"></div> <span>Fermer</span>
                                 </li>
                             </ul>
