--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>Sarl Extra Coiffure</title>
-    <link rel="shortcut icon" href="img/logo1.png" />
+    <link rel="shortcut icon" href="/img/logo1.png" />
     <link rel="stylesheet" href="../../../../../fonts.googleapis.com/css25aa4.css?family=Outfit:wght@300;400;500;600;700;800;900&amp;display=swap">
     <link rel="stylesheet" href="css/plugins.css"/>
     <link rel="stylesheet" href="css/style.css" />
