--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="col-md-12 text-center">
                     <div class="v-middle">
                         <h5>Restez affûté, ayez fière allure.</h5>
-                        <h1>VOTRE SALON DE<br>COIFFURE PRÉFÉRÉ.</h1>
+                        <h1>VOTRE SALON DE<br>COIFFURE FAVORI.</h1>
                         <h5>32 Rue Pêcherie, Tarare. Rendez-vous : 06 58 66 70 76</h5> 
                         <a href="#" class="button-1 mt-20">Prendre rendez-vous<span></span></a>
                     </div>
