--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <a class="vid" src="https://www.youtube.com/watch?v=e2x0UXVU2yg">
+                    <a class="vid" href="https://www.youtube.com/watch?v=e2x0UXVU2yg">
                         <div class="vid-butn"> <span class="icon"><i class="ti-control-play"></i></span> </div>
                     </a>
                 </div>
