--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>Sarl Extra Coiffure</title>
-    <link rel="shortcut icon" href="/img/logo1.png" />
+    <link rel="shortcut icon" href="img/logo1.png" />
     <link rel="stylesheet" href="../../../../../fonts.googleapis.com/css25aa4.css?family=Outfit:wght@300;400;500;600;700;800;900&amp;display=swap">
     <link rel="stylesheet" href="css/plugins.css"/>
     <link rel="stylesheet" href="css/style.css" />
@@ -65,7 +65,7 @@
                 <div class="col-md-12 text-center">
                     <div class="v-middle">
                         <h5>Restez affûté, ayez fière allure.</h5>
-                        <h1>VOTRE SALON DE<br>COIFFURE FAVORI.</h1>
+                        <h1>VOTRE SALON DE<br>COIFFURE PRÉFÉRÉ.</h1>
                         <h5>32 Rue Pêcherie, Tarare. Rendez-vous : 06 58 66 70 76</h5> 
                         <a href="#" class="button-1 mt-20">Prendre rendez-vous<span></span></a>
                     </div>
@@ -479,7 +479,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <a class="vid" href="https://www.youtube.com/watch?v=e2x0UXVU2yg">
+                    <a class="vid" href="../../../../../www.youtube.com/watch61eb.html">
                         <div class="vid-butn"> <span class="icon"><i class="ti-control-play"></i></span> </div>
                     </a>
                 </div>
@@ -590,14 +590,14 @@
                         <div class="team-card mb-30">
                             <div class="team-img"><img src="img/team/b2.png" alt="" class="w-100"></div>
                             <div class="team-content">
-                                <h3 class="team-title">Stephen Martin<span>Stylist</span></h3>
+                                <h3 class="team-title">Stephen Martin<span>StylisteF</span></h3>
                                 <p class="team-text">Un barbier expert avec plus de 10 ans d'expérience, passionné par les coupes modernes et les styles classiques. Sa précision et son souci du détail garantissent à chaque client une coupe impeccable et personnalisée.</p>
                                 <div class="social">
                                     <div class="full-width"> <a href="#"><i class="ti-linkedin"></i></a> <a href="#"><i class="ti-facebook"></i></a> <a href="#"><i class="ti-twitter"></i></a> <a href="#"><i class="ti-instagram"></i></a> </div>
                                 </div> <a href="team-details.html" class="button-1 mt-15">Détails de l'équipe<span></span></a>
                             </div>
                             <div class="title-box">
-                                <h3 class="mb-0">Stephen Martin<span>Stylist</span></h3>
+                                <h3 class="mb-0">Stephen Martin<span>Styliste</span></h3>
                             </div>
                         </div>
                         <div class="team-card mb-30">
@@ -809,96 +809,89 @@
                         </div>
                     </div>
                     <!-- Appointment form -->
-                    <div class="col-md-5 offset-md-2">
-                        <div class="booking-box">
-                            <div class="head-box text-center">
-                                <h4>PRENEZ RENDEZ-VOUS</h4>
-                            </div>
-                            <div class="booking-inner clearfix">
-                                <form class="form1 clearfix">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="input1_wrapper">
-                                                <label>Nom</label>
-                                                <div class="input2_inner">
-                                                    <input type="text" class="form-control input" placeholder="Nom" required>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="input1_wrapper">
-                                                <label>Téléphone</label>
-                                                <div class="input2_inner">
-                                                    <input type="text" class="form-control input" placeholder="Téléphone" required>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="input1_wrapper">
-                                                <label>Date</label>
-                                                <div class="input1_inner">
-                                                    <input type="text" class="form-control input datepicker" placeholder="Date" required>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="select1_wrapper">
-                                                <label>Horaires</label>
-                                                <div class="select1_inner">
-                                                    <select class="select2 select" style="width: 100%">
-                                                        <option value="0">Horaires</option>
-                                                        <option value="1">10h00</option>
-                                                        <option value="2">11h00</option>
-                                                        <option value="3">12h00</option>
-                                                        <option value="4">14h00</option>
-                                                        <option value="5">16h00</option>
-                                                        <option value="6">18h00</option>
-                                                        <option value="7">20h00</option>
-                                                    </select>                                                    
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="select1_wrapper">
-                                                <label>Services</label>
-                                                <div class="select1_inner">
-                                                    <select class="select2 select" style="width: 100%">
-                                                        <option value="0">Services</option>
-                                                        <option value="0">Coiffage</option>
-                                                        <option value="1">Masque facial</option>
-                                                        <option value="2">Rasage</option>
-                                                        <option value="3">Taillage de barbe</option>
-                                                        <option value="4">Lavage de cheveux</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="select1_wrapper">
-                                                <label>Choisissez un Barber</label>
-                                                <div class="select1_inner">
-                                                    <select class="select2 select" style="width: 100%">
-                                                        <option value="0">Choisissez un Barber</option>
-                                                        <option value="0">Philip</option>
-                                                        <option value="1">Stephen</option>
-                                                        <option value="2">Dennis</option>
-                                                        <option value="3">Helen</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-12">
-                                            <button type="submit" class="btn-form1-submit mt-15">Prendre rendez-vous</button>
-                                        </div>
-                                    </div>
-                                </form>
+<div class="col-md-5 offset-md-2">
+    <div class="booking-box">
+        <div class="head-box text-center">
+            <h4>PRENEZ RENDEZ-VOUS</h4>
+        </div>
+        <div class="booking-inner clearfix">
+            <form action="send-email.php" method="POST" class="form1 clearfix">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="input1_wrapper">
+                            <label>Nom</label>
+                            <div class="input2_inner">
+                                <input type="text" name="nom" class="form-control input" placeholder="Nom" required>
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-6">
+                        <div class="input1_wrapper">
+                            <label>Téléphone</label>
+                            <div class="input2_inner">
+                                <input type="text" name="telephone" class="form-control input" placeholder="Téléphone" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="input1_wrapper">
+                            <label>Date</label>
+                            <div class="input1_inner">
+                                <input type="text" name="date" class="form-control input datepicker" placeholder="Date" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="select1_wrapper">
+                            <label>Horaires</label>
+                            <div class="select1_inner">
+                                <select name="horaire" class="select2 select" style="width: 100%">
+                                    <option value="0">Horaires</option>
+                                    <option value="10h00">10h00</option>
+                                    <option value="11h00">11h00</option>
+                                    <option value="12h00">12h00</option>
+                                    <option value="14h00">14h00</option>
+                                    <option value="16h00">16h00</option>
+                                    <option value="18h00">18h00</option>
+                                    <option value="20h00">20h00</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="select1_wrapper">
+                            <label>Services</label>
+                            <div class="select1_inner">
+                                <select name="service" class="select2 select" style="width: 100%">
+                                    <option value="0">Services</option>
+                                    <option value="Coiffage">Coiffage</option>
+                                    <option value="Masque facial">Masque facial</option>
+                                    <option value="Rasage">Rasage</option>
+                                    <option value="Taillage de barbe">Taillage de barbe</option>
+                                    <option value="Lavage de cheveux">Lavage de cheveux</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Champ pour l'email -->
+                    <div class="col-md-6">
+                        <div class="input1_wrapper">
+                            <label>Email</label>
+                            <div class="input2_inner">
+                                <input type="email" name="email" class="form-control input" placeholder="Email" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <button type="submit" class="btn-form1-submit mt-15">Prendre rendez-vous</button>
+                    </div>
                 </div>
-            </div>
+            </form>
         </div>
-    </section>
+    </div>
+</div>
+
+</section>
     <!-- Clients -->
     <section class="clients">
         <div class="container">
@@ -967,7 +960,7 @@
                                     <div class="dots"></div> <span>10:00 - 20:00</span>
                                 </li>
                                 <li>
-                                    <div class="tit">Week-End</div>
+                                    <div class="tit">Samedi</div>
                                     <div class="dots"></div> <span>Fermer</span>
                                 </li>
                             </ul>
