--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
             <h4>PRENEZ RENDEZ-VOUS</h4>
         </div>
         <div class="booking-inner clearfix">
-            <form action="./send-email.php" method="POST" class="form1 clearfix">
+            <form action="https://formspree.io/f/xkgnglro" method="POST" class="form1 clearfix">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="input1_wrapper">
